fixed minor spacing above fb button

--- a/css/style.css
+++ b/css/style.css
@@ -331,7 +331,7 @@ a.button1 {
   display:inline-block;
   padding: 15px 0 12px 18px;
   border:0.1em solid #FFFFFF;
-  margin:8px 0.3em 0.3em 0;
+  margin:0px 0.3em 0.3em 0;
   border-radius:0.12em;
   box-sizing: border-box;
   text-decoration:none;
